# Rustkov

./: .gitignore  Cargo.toml  README.md
data/: brain.example.yml
src/: brain.rs  brain_components.rs  config.rs  enums.rs  error.rs  lib.rs  stats.rs
