[package]
name = "rustkov"
authors = ["Kjolnyr <kjolnyr@protonmail.com>"]
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"
description = "Markov chain chatbot library"
repository = "https://github.com/kjolnyr/rustkov.git"
homepage = "https://github.com/kjolnyr/rustkov"
readme = "README.md"
keywords = ["chatbot", "markov", "bot"]


[dependencies]
rand = "0.8.5"
rand_chacha = "0.3.1"
serde = { version = "1.0.147", features = ["derive"] } 
serde_yaml = "0.9.14"
bincode = "1.3.3"


# Enable high optimizations for dependencies, but not for our code:
[profile.dev.package."*"]   
opt-level = 3